@@ -382,6 +382,8 @@ Trunk (unreleased changes)
     HDFS-673. BlockReceiver#PacketResponder should not remove a packet from
     the ack queue before its ack is sent. (hairong)
 
+    HDFS-682. Fix bugs in TestBlockUnderConstruction.  (szetszwo)
+
 Release 0.20.2 - Unreleased
 
   BUG FIXES
